--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAYO</title>
-    <link rel="icon" href="/assets/Group.png" type="image/png">
+    <link rel="icon" href="./assets/Group.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
@@ -44,6 +44,6 @@
     </section>
 
 
-    <script src="/javaScript.js"></script>
+    <script src="./javaScript.js"></script>
 </body>
 </html>
