--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAYO-MAIN</title>
-    <link rel="icon" href="/assets/Group.png" type="image/png">
+    <link rel="icon" href="./assets/Group.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
@@ -12,7 +12,7 @@
     <section class="max-w-md min-h-screen mx-auto py-6 bg-gray-200">
         <header>
             <nav class="flex justify-around items-center">
-               <img class="w-16" src="/assets/Group.png" alt="">
+               <img class="w-16" src="./assets/Group.png" alt="">
                <div>
                 <h1 class="text-3xl font-bold">
                     $ <span id="main-balance">5000</span>
@@ -29,32 +29,32 @@
 
                 <div class="card grid grid-cols-3 mt-10 gap-2 p-2 ">
                     <div id="add-money-box" class="box cursor-pointer border rounded-sm p-4 text-center hover:bg-green-300">
-                        <img class="w-8 mx-auto" src="/assets/wallet1.png" alt="">
+                        <img class="w-8 mx-auto" src="./assets/wallet1.png" alt="">
                         <h3>Add Money</h3>
                     </div>
 
                     <div id="cash-out-box" class="box cursor-pointer border rounded-sm p-4 text-center hover:bg-green-300">
-                        <img class="w-8 mx-auto" src="/assets/send1.png" alt="">
+                        <img class="w-8 mx-auto" src="./assets/send1.png" alt="">
                         <h3>Cashout</h3>
                     </div>
 
                     <div id="transfer-money-box" class="box cursor-pointer border rounded-sm p-4 text-center hover:bg-green-300">
-                        <img class="w-8 mx-auto" src="/assets/money1.png" alt="">
+                        <img class="w-8 mx-auto" src="./assets/money1.png" alt="">
                         <h3>Transfer Money</h3>
                     </div>
 
                     <div id="get-bonus-box" class="box cursor-pointer border rounded-sm p-4 text-center hover:bg-green-300">
-                        <img class="w-8 mx-auto" src="/assets/bonus1.png" alt="">
+                        <img class="w-8 mx-auto" src="./assets/bonus1.png" alt="">
                         <h3>Get Bonus</h3>
                     </div>
 
                     <div id="pay-bill-box" class="box cursor-pointer border rounded-sm p-4 text-center hover:bg-green-300">
-                        <img class="w-8 mx-auto" src="/assets/purse1.png" alt="">
+                        <img class="w-8 mx-auto" src="./assets/purse1.png" alt="">
                         <h3>Pay Bill</h3>
                     </div>
 
                     <div id="transactions-box" class="box cursor-pointer border rounded-sm p-4 text-center hover:bg-green-300">
-                        <img class="w-8 mx-auto" src="/assets/transaction1.png" alt="">
+                        <img class="w-8 mx-auto" src="./assets/transaction1.png" alt="">
                         <h3>Transactions</h3>
                     </div>
                 </div>
@@ -313,14 +313,14 @@
 
     </section>
     
-    <script src="/addmoney.js"></script>
+    <script src="./addmoney.js"></script>
     
-    <script src="/toggle.js"></script>
-    <script src="/cashout.js"></script>
-    <script src="/transfermoney.js"></script>
-    <script src="/paybill.js"></script>
-    <script src="/getbonus.js"></script>
-    <script src="/logout.js"></script>
+    <script src="./toggle.js"></script>
+    <script src="./cashout.js"></script>
+    <script src="./transfermoney.js"></script>
+    <script src="./paybill.js"></script>
+    <script src="./getbonus.js"></script>
+    <script src="./logout.js"></script>
 
 </body>
 </html>
